# AWS-FinOps-Dashboard

./: .env.example  .gitignore  Dockerfile  Makefile  README-copilot-collections.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  security-audit.yml
app/: README.md  __init__.py  alerts.py  anomaly_detection.py  aws_session.py  cache.py  config.py  email.py  exceptions.py  export.py  finops.py  logging_config.py  org_accounts.py  resilience.py  scheduler.py  streamlit_app.py  user_prefs.py
docs/: api.md  configuration.md  security.md  troubleshooting.md
scripts/: permissions_check.py
tests/: conftest.py  test_anomaly_detection.py  test_aws_session.py  test_cache.py  test_email_ses.py  test_export.py  test_export_edge_cases.py  test_finops.py  test_multi_account.py  test_report_scheduler.py  test_resilience.py  test_security_hardening.py  test_user_prefs.py
