[tool.poetry]
name = "aws-finops-dashboard"
version = "0.1.0"
description = "Serverless FinOps dashboard for AWS cost analysis and tag compliance"
authors = ["Richard Lewis <Richardjlew3@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.0"
pandas = "^2.2.2"
streamlit = "^1.37.0"
plotly = "^5.23.0"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.0"
# Optional ML dependency for IsolationForest anomaly detection
scikit-learn = "^1.5.0"
# Optional dependency for Redis cache backend (uncomment to enable)
# redis = "^5.0.0"
# Export & Reporting dependencies
openpyxl = "^3.1.5"  # Excel writing engine via pandas
jinja2 = "^3.1.4"    # Template rendering for report emails / summaries
apscheduler = "^3.10.4"  # In-process scheduling for automated reports

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
freezegun = "^1.5.0"
moto = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"